--- a/src/resources/localization/ru.json
+++ b/src/resources/localization/ru.json
@@ -1,17 +1,36 @@
 {
+  "WORKSPACES": "",
   "CHANNELS": "Каналы",
   "DIRECT_MESSAGES": "Личные сообщения",
   "CANCEL": "Отмена",
   "CREATE": "Создать",
-  "BACK": "Добавить",
-  "ADD": "Пригласить",
+  "BACK": "",
+  "ADD": "Добавить",
+  "INVITE": "Пригласить",
+  "CHAT_MEMBER": "",
+  "CHAT_MEMBERS": "",
+  "CHAT_NO_MEMBERS": "",
   "CHAT_SEE_ALL_ANSWERS": "Смотреть все ответы",
   "CHAT_YESTERDAY": "Вчера",
   "CHAT_TODAY": "Сегодня",
   "CHAT_THREADED_REPLIES": "Ответы",
+  "MDL_WS_NEW_WORKSPACE_TITLE": "",
+  "MDL_WS_WORKSPACE_NAME": "",
+  "MDL_WS_WORKSPACE_NAME_HINT": "",
+  "MDL_WS_COLLABORATORS": "",
+  "MDL_WS_COLLABORATORS_HINT": "",
   "MDL_COL_INVITE_TITLE": "Приглашения",
   "MDL_COL_TYPE_EMAIL_ADDRESSES": "Введите email'ы приглашаемых",
   "MDL_COL_TYPE_EMAIL_ADDRESSES_HINT": "Добавить участников",
   "MDL_CH_NEW_CHANNEL_TITLE": "Новый канал",
-  "MDL_CH_CHANNEL_NAME": "Название канала"
+  "MDL_CH_CHANNEL_NAME": "Название канала",
+  "MDL_CH_CHANNEL_NAME_HINT": "",
+  "MDL_CH_CHANNEL_DESCRIPTION": "",
+  "MDL_CH_CHANNEL_DESCRIPTION_HINT": "",
+  "MDL_CH_CHANNEL_TYPE": "",
+  "MDL_CH_CHANNEL_TYPE_HINT": "",
+  "MDL_CH_AUTOMATICALLY_ADD_NEW_USERS": "",
+  "MDL_CH_AUTOMATICALLY_ADD_NEW_USERS_HINT": "",
+  "MDL_DIR_NEW_DIRECT_CHAT": "",
+  "MDL_DIR_SEARCH_MEMBERS": ""
 }
