--- a/src/resources/localization/vi.json
+++ b/src/resources/localization/vi.json
@@ -1,1 +1,36 @@
-{}
+{
+  "WORKSPACES": "Dublicate key",
+  "CHANNELS": "Kênh",
+  "DIRECT_MESSAGES": "Tin nhắn riêng",
+  "CANCEL": "Bỏ qua",
+  "CREATE": "Tạo",
+  "BACK": "Quay lại ",
+  "ADD": "Thêm",
+  "INVITE": "Mời",
+  "CHAT_MEMBER": "Thành viên",
+  "CHAT_MEMBERS": "Các thành viên",
+  "CHAT_NO_MEMBERS": "Không có thành viên nào",
+  "CHAT_SEE_ALL_ANSWERS": "Xem trả lời",
+  "CHAT_YESTERDAY": "Hôm qua",
+  "CHAT_TODAY": "Hôm nay",
+  "CHAT_THREADED_REPLIES": "Trả lời",
+  "MDL_WS_NEW_WORKSPACE_TITLE": "Tạo không gian làm việc mới ",
+  "MDL_WS_WORKSPACE_NAME": "Tên không gian làm việc ",
+  "MDL_WS_WORKSPACE_NAME_HINT": "Vui lòng thêm tên cho không gian làm việc",
+  "MDL_WS_COLLABORATORS": "Thành viên đã được mời",
+  "MDL_WS_COLLABORATORS_HINT": "Mời qua thư điện tử",
+  "MDL_COL_INVITE_TITLE": "Gửi",
+  "MDL_COL_TYPE_EMAIL_ADDRESSES": "Điền thư điện tử ",
+  "MDL_COL_TYPE_EMAIL_ADDRESSES_HINT": "Mời thành viên",
+  "MDL_CH_NEW_CHANNEL_TITLE": "Tạo mới kênh",
+  "MDL_CH_CHANNEL_NAME": "Tên kênh ",
+  "MDL_CH_CHANNEL_NAME_HINT": "Vui lòng cung cấp tên kênh và biểu tượng tùy chọn",
+  "MDL_CH_CHANNEL_DESCRIPTION": "Mô tả",
+  "MDL_CH_CHANNEL_DESCRIPTION_HINT": "Vui lòng mô tả về kênh (không bắt buộc)",
+  "MDL_CH_CHANNEL_TYPE": "Kiểu kênh",
+  "MDL_CH_CHANNEL_TYPE_HINT": "Mọi người đều có thể tham gia kênh công khai, nhưng với kênh riêng tư, chỉ có thể tham gia khi được mời",
+  "MDL_CH_AUTOMATICALLY_ADD_NEW_USERS": "Tự động thêm người dùng mới ",
+  "MDL_CH_AUTOMATICALLY_ADD_NEW_USERS_HINT": "Chỉ khả thi với kênh công khai ",
+  "MDL_DIR_NEW_DIRECT_CHAT": "Tạo tin nhắn riêng",
+  "MDL_DIR_SEARCH_MEMBERS": "Tìm kiếm thành viên "
+}
